# Whisp

./: CODE_OF_CONDUCT.md  README.md  TESTING.md  TRANSLATIONS.md  flake.nix  meson.build
.github/workflows/: ci.yml  test.yml
data/: io.github.tanaybhomia.Whisp.desktop.in  io.github.tanaybhomia.Whisp.metainfo.xml  meson.build
docs/: donate.html  index.html  manual.html
docs/css/: style.css
nix/: default.nix  module.nix  shell.nix
po/: LINGUAS  POTFILES.in  meson.build  whisp.pot
src/whisp/: config.py  editor.py  highlighter.py  main.py  window.py
tests/: meson.build  test_text_search.py
